src/components/Subscribe.scss
.subscribe {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  width: 100%;
  margin-right: -15px;
  margin-left: -15px;
  background: #f1f2f5;
  color: #2a2a2a;

  .title {
    margin-top: 0;
    margin-bottom: 1rem;
    font-size: 1.5em;
  }

  p {
    font-size: 16px;
  }

  input {
    color: #2a2a2a;
    width: 100%;
    border: none;
    margin-bottom: 20px;
    padding: 0.5rem;
  }

  button {
    display: inline-block;

    border: none;
    background-image: none;
    background-color: #dd0505;
    color: white;
    padding: 0.75rem 1rem;
    letter-spacing: 1px;
    transition: all 0.1s linear;

    &:hover {
      cursor: pointer;
      background: darken(#dd0505, 15%);
    }
  }

  label {
    font-weight: 700;
  }
}

.subscribe-cta {
  display: flex;
  flex-direction: column;
  flex: 1;
  padding: 1.5rem;
}

.subscribe-form {
  display: flex;
  flex-direction: column;
  flex: 1;
  padding: 1.5rem;
  margin-bottom: 0 !important;
  background-color: #e1e1e1;
}

.error {
  background-color: #dd0505;
  color: #fff;
  padding: 10px;
}

.success {
  background-color: #55a155;
  color: #fff;
  padding: 10px;
}

